Añadiendo ngIf y ngFor

--- a/myApp/src/app/components/body/body.component.html
+++ b/myApp/src/app/components/body/body.component.html
@@ -1,1 +1,20 @@
-<h1>Body component</h1>
+<div class="row">
+  <div class="col">
+    <h1>*ngIf</h1>
+    <hr>
+    <div class="card text-white bg-primary mb-3" *ngIf="mostrar">
+      <div class="card-body">
+        <h5 class="card-title">{{frase.autor}}</h5>
+        <p class="card-text">{{frase.mensaje}}</p>
+      </div>
+    </div>
+    <button (click)="mostrar = !mostrar" class="btn btn-outline-primary btn-block">Mostrar / Ocultar</button>
+  </div>
+  <div class="col">
+    <h1>*ngFor</h1>
+    <hr>
+    <ul class="list-group" *ngFor="let personaje of personajes; let i=index">
+      <li class="list-group-item">{{i+1}}-{{personaje}}</li>
+    </ul>
+  </div>
+</div>
